# bazel-compdb

./: BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum  main.go
.github/workflows/: test.yml
example/: BUILD  WORKSPACE
example/src/: greeter.cc  greeter.h  main.cc
internal/: BUILD.bazel
internal/config/: BUILD.bazel  config.go
internal/runner/: compile_commands.go  runner.go
tests/integration/: BUILD.bazel  compile_commands.darwin.json  compile_commands.linux.json  compile_commands.windows.json  integration_test.py  normalize_compdb.py  sanitize_compile_commands.py
tests/integration/example_project/: .gitignore  BUILD.bazel  MODULE.bazel  hello_world.cc
tests/integration/snapshots/integration_test/: compile_commands.json
