load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bazel_compdb_lib",
    srcs = ["main.go"],
    importpath = "bazel-compdb",
    visibility = ["//visibility:private"],
    deps = [
        "//internal:runner",
        "//internal/config:config",
    ],
)

go_binary(
    name = "bazel-compdb",
    embed = [":bazel_compdb_lib"],
    visibility = ["//visibility:public"],
)
