module(name = "bazel_cdb")

bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")

bazel_dep(name = "rules_snapshot_test", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "rules_python", version = "1.7.0", dev_dependency = True)

git_override(
    module_name = "rules_snapshot_test",
    commit = "1d18d993a233c7caf246343b559b7ec2a2d08627",
    remote = "https://github.com/calebzulawski/rules_snapshot_test.git",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    name = "go_sdk",
    version = "1.25.1",
)
use_repo(go_sdk, "go_sdk")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "in_gopkg_yaml_v3",
    "org_golang_google_protobuf",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "io_bazel",
    build_file_content = """
package(default_visibility = ["//visibility:public"])

proto_library(
    name = "stardoc_output_proto",
    srcs = ["stardoc_output.proto"],
    import_prefix = "src/main/protobuf",
)

proto_library(
    name = "build_proto",
    srcs = ["build.proto"],
    import_prefix = "src/main/protobuf",
    deps = [":stardoc_output_proto"],
)

proto_library(
    name = "analysis_v2_proto",
    srcs = ["analysis_v2.proto"],
    import_prefix = "src/main/protobuf",
    deps = [":build_proto"],
)
""",
    integrity = "sha256-T/Rg0FAsA7Wcdy9zjXdLedbAWaPVDq+MDnczfdh0m9s=",
    strip_prefix = "bazel-8.0.0/src/main/protobuf",
    urls = [
        "https://github.com/bazelbuild/bazel/archive/refs/tags/8.0.0.tar.gz",
    ],
)
