load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

go_proto_library(
    name = "stardoc_go_proto",
    importpath = "bazel-compdb/internal/stardoc_go_proto",
    proto = "@io_bazel//:stardoc_output_proto",
)

go_proto_library(
    name = "build_go_proto",
    importpath = "bazel-compdb/internal/build_go_proto",
    proto = "@io_bazel//:build_proto",
    deps = [":stardoc_go_proto"],
)

go_proto_library(
    name = "analysis_go_proto",
    importpath = "bazel-compdb/internal/analysis_go_proto",
    proto = "@io_bazel//:analysis_v2_proto",
    deps = [":build_go_proto"],
)

go_library(
    name = "runner",
    srcs = [
        "runner/runner.go",
        "runner/compile_commands.go",
    ],
    importpath = "bazel-compdb/internal/runner",
    visibility = ["//visibility:public"],
    deps = [
        ":analysis_go_proto",
        "//internal/config:config",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)
